# evemu_server

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  config.h.in  docker-compose.yml
cmake/: BuildBoost.cmake  BuildMySQL.cmake  TargetBuildPCH.cmake
dep/gangsta/: CMakeLists.txt
dep/utils/: CMakeLists.txt
doc/: ChangeLog.md  CodingStandards.html  Effects.html  EntityList_Process.html  Index.html  MainLoop.html  ServerCompileAndSetup.html  ServiceManager.html  Ship.html  Startup.html
doc/client/: CallRequest.html  Packet-Dispatch.html  client-net.html
doc/database/: statictables.html  tables.html
doc/developer/: Index.html  MainLoop.html  PageTemplate.html  ServicManager.html  ServiceManager.html  Startup.html
doc/developer/client/: Client-Call_Req.html  Packet-Dispatch.html  client-net.html
doc/eve-tool/: eve-tool.html
doc/syntaxhighlighter_3.0.83/: index.html
doc/xmlPacket/: xmlPacketGenerator.html
include/eve-server/character/: PaperDollDB.h  PaperDollService.h
sql/: .gitattributes  Dump.sh  Install.sh  README  README.md  dump.sh  evemu_dynamic-dump.sql  install.sh  linux_install.sh  prime_db.sql
sql/ofic-updates/: 18a7-sounds.sql  2000001-shipTypes.sql  3200002-chrBloodlines.sql  3200010-chrBloodlineNames.sql  3200011-chrDefaultOverviews.sql  3200012-chrDefaultOverviewGroups.sql  32f9-schematics.sql  5c46-ownericons.sql  5d90-locationscenes.sql  6afa-schematicstypemap.sql  80e0-invtypematerials.sql  InvTypesExtra.sql  add-crtClasses.sql  amarr-stations-dgmtypeattributes.sql  blk-bpTypes.sql  blk-certificateRelationships.sql  blk-characterStatic.sql  blk-chrBloodlineNames.sql  blk-chrCareerSkills.sql  blk-chrCareers.sql  blk-chrDefaultOverviewGroups.sql  blk-chrDefaultOverviews.sql  blk-chrRaceskills.sql  blk-chrSchools.sql  blk-chrSpecialities.sql  blk-chrSpecialitySkills.sql  blk-corporationStatic.sql  blk-dgmAttribs.sql  blk-dgmEffectsInfo.sql  blk-dgmShipBonusModifiers.sql  blk-dgmSkillBonusModifiers.sql  blk-eveStaticLocations.sql  blk-eveStaticOwners.sql  blk-icons.sql  blk-invTypesToWrecks.sql  blk-locationScenes.sql  blk-lpStore.sql  blk-mapCelestialDescriptions.sql  blk-npcLootTables.sql  blk-npcStandings.sql  (+54 more)
sql/tables/: account.sql  actKeyTypes.sql  agtAgentTypes.sql  agtAgents.sql  agtMissions.sql  agtOffers.sql  agtSkillLevel.sql  alnAlliance.sql  alnApplications.sql  alnContacts.sql  alnLabels.sql  avatar_colors.sql  avatar_modifiers.sql  avatar_sculpts.sql  avatars.sql  billTypes.sql  billsPayable.sql  billsReceivable.sql  bloodlineTypes.sql  bookmarkFolders.sql  bookmarks.sql  cacheLocations.sql  cacheOwners.sql  careers.sql  channelChars.sql  channelMods.sql  channels.sql  chrAccessories.sql  chrAncestries.sql  chrAttributes.sql  chrBLAccessories.sql  chrBLBackgrounds.sql  chrBLBeards.sql  chrBLCostumes.sql  chrBLDecos.sql  chrBLEyebrows.sql  chrBLEyes.sql  chrBLHairs.sql  chrBLLights.sql  chrBLLipsticks.sql  (+232 more)
sql/testScripts/: invtypestowrecks.sql
src/eve-apiserver/: APIAccountDB.cpp  APIActiveObjectManager.cpp  APICharacterManager.h  APICorporationManager.cpp  APIEveSystemManager.cpp  APIMapManager.cpp  APIMapManager.h  APIServerListener.h  APIServerManager.cpp  APIServerManager.h  APIServiceManager.cpp  CMakeLists.txt
src/eve-common/: CMakeLists.txt  EVEVersion.h  eve-common.h
src/eve-common/auth/: PasswordModule.cpp
src/eve-common/cache/: CachedObjectMgr.cpp  CachedObjectMgr.h
src/eve-common/database/: EVEDBUtils.cpp  EVEDBUtils.h  RowsetReader.cpp  RowsetReader.h  RowsetToSQL.h
src/eve-common/marshal/: EVEMarshal.cpp  EVEMarshalStringTable.cpp  EVEMarshalStringTable.h  EVEUnmarshal.cpp
src/eve-common/network/: EVEPktDispatch.cpp  EVESession.cpp  EVESession.h  (+3 more)
src/eve-core/: CMakeLists.txt  eve-compat.h  eve-core.h
src/eve-server/: CMakeLists.txt  Client.cpp  Client.h  ClientSession.cpp  ConsoleCommands.cpp  EVEServerConfig.cpp  EVEServerConfig.h  EntityList.cpp  EntityList.h  LiveUpdateDB.cpp  LiveUpdateDB.h  NetService.cpp  NetService.h  PyBoundObject.cpp  PyBoundObject.h  PyCallable.cpp  PyCallable.h  PyService.cpp  PyService.h  PyServiceCD.h  PyServiceMgr.cpp  PyServiceMgr.h  ServiceDB.cpp  ServiceDB.h  StaticDataMgr.cpp  eve-server.cpp  eve-server.h
src/eve-static/: CMakeLists.txt  eveStatic.cpp  eveStatic.h
src/eve-static/blk/: BlkShipType.cpp  BlkShipType.h
src/eve-static/chr/: ChrBloodline.cpp  ChrBloodline.h
src/eve-static/inv/: InvBlueprintType.cpp  InvBlueprintType.h  InvCategory.cpp  InvCategory.h  InvGroup.cpp  InvGroup.h  InvType.cpp  InvType.h  invTypes.cpp  invTypes.h
src/eve-static/sta/: StaStationType.cpp  StaStationType.h
src/eve-test/: CMakeLists.txt
src/eve-tool/: CMakeLists.txt  Commands.cpp  eve-tool.cpp  eve-tool.h
src/eve-xmlpktgen/: CMakeLists.txt  DecodeGenerator.cpp  XMLPacketGen.cpp  XMLParser.cpp  XMLParser.h  XMLParserEx.h  eve-xmlpktgen.cpp  eve-xmlpktgen.h
utils/: devtools.raw.mt  eve-server.xml  status.php
utils/config/: eve-server.xml
(+439 files in other folders)
